# xpShell

./: CMakeLists.txt  CMakeSettings.json  README.md
inputdll/: CMakeLists.txt  input.manifest
sndvol32/: CMakeLists.txt
systray/: CMakeLists.txt
systray/dll/: CMakeLists.txt  RCa09040  windowsshell.manifest
systray/exestub/: CMakeLists.txt  RCa04732
